force-app/main/default/objects/Billing__c/fields/Billing_Num__c.field-meta.xml
<CustomField>
    <fullName>Billing_Num__c</fullName>
    <label>SAP Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>