force-app/main/default/objects/Billing__c/fields/Collection_Base_Amount__c.field-meta.xml
<CustomField>
    <fullName>Collection_Base_Amount__c</fullName>
    <label>Collection Amount (Local Currency)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>