force-app/main/default/objects/Billing__c/fields/Collection_Base_Currency__c.field-meta.xml
<CustomField>
    <fullName>Collection_Base_Currency__c</fullName>
    <label>Local Currency of Collection Amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>