force-app/main/default/objects/Billing__c/fields/Collection_Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Collection_Transaction_Amount__c</fullName>
    <label>Collection Amount (Transaction Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>