force-app/main/default/objects/Billing__c/fields/Currency_not_match_order__c.field-meta.xml
<CustomField>
    <fullName>Currency_not_match_order__c</fullName>
    <formula>TEXT(Currency__c) !=  TEXT(Order__r.Currency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency not match order</label>
    <type>Checkbox</type>
</CustomField>