force-app/main/default/objects/Billing__c/fields/Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Current_Month__c</fullName>
    <formula>IF(
				AND(
								Invoice_Date_Month__c = TEXT(MONTH(TODAY())) ,
								Invoice_Date_Year__c=TEXT(YEAR(TODAY()))),
				true,
				false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Month</label>
    <type>Checkbox</type>
</CustomField>