force-app/main/default/objects/Billing__c/fields/Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Current_Year__c</fullName>
    <formula>IF(
AND(
Invoice_Date_Year__c=TEXT(YEAR(TODAY()))),
true,
false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Year</label>
    <type>Checkbox</type>
</CustomField>