force-app/main/default/objects/Billing__c/fields/Delivery_Note__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Note</label>
    <referenceTo>Delivery_Note__c</referenceTo>
    <relationshipName>Billing</relationshipName>
    <type>Lookup</type>
</CustomField>