force-app/main/default/objects/Billing__c/fields/Delivery_Plant__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Plant__c</fullName>
    <formula>Invoice__r.Delivery_Plant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Plant</label>
    <type>Text</type>
</CustomField>