force-app/main/default/objects/Billing__c/fields/Drawer__c.field-meta.xml
<CustomField>
    <fullName>Drawer__c</fullName>
    <label>Drawer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>