force-app/main/default/objects/Billing__c/fields/Invoice_Amount_without_Tax_Report__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount_without_Tax_Report__c</fullName>
    <formula>IF(SAP_Total_Net__c !=0, SAP_Total_Net__c, 0)
* 
IF(CONTAINS(&apos;ZAR3,ZAR8,ZRE,ZRE1,ZREQ,ZR1Q,ZARX,ZMX2,ZMX3,ZARA,ZARF,ZAR2&apos;,TEXT(Order__r.Order_type__c)), -1, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Amount without Tax Report</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>