force-app/main/default/objects/Billing__c/fields/Invoice_Amount_without_Tax_Report_USD__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount_without_Tax_Report_USD__c</fullName>
    <formula>Net_Invoice_Amount_USD__c
*
IF(CONTAINS(&apos;ZAR8,ZARX,ZMX2,ZMX3,ZRE,ZRE1,ZREQ,ZR1Q,ZARA,ZARF,ZAR2,ZAR3,ZARH&apos;,TEXT(Order__r.Order_type__c)), -1, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Amount w/oTax (USD) Report</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>