force-app/main/default/objects/Billing__c/fields/Invoice_Date_Month__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date_Month__c</fullName>
    <formula>TEXT(MONTH(Invoice_Date__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Date Month</label>
    <type>Text</type>
</CustomField>