force-app/main/default/objects/Billing__c/fields/Invoice_Date_Year__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date_Year__c</fullName>
    <formula>TEXT(YEAR(Invoice_Date__c  ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Date Year</label>
    <type>Text</type>
</CustomField>