force-app/main/default/objects/Billing__c/fields/Invoice_Owner__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Owner__c</fullName>
    <formula>Invoice__r.Owner:User.CommunityNickname</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Owner</label>
    <type>Text</type>
</CustomField>