force-app/main/default/objects/Billing__c/fields/Invoice_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Quantity__c</fullName>
    <label>Invoice Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>