force-app/main/default/objects/Billing__c/fields/Invoice_Week__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Week__c</fullName>
    <formula>IF( Is_Last_Week__c , &quot;Last Week&quot;, IF(Is_This_Week__c, &quot;This Week&quot;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Week</label>
    <type>Text</type>
</CustomField>