force-app/main/default/objects/Billing__c/fields/Is_Last_Week__c.field-meta.xml
<CustomField>
    <fullName>Is_Last_Week__c</fullName>
    <formula>Invoice_Date__c &gt;= (TODAY()-7-IF(WEEKDAY(TODAY())=1,WEEKDAY(TODAY())+7,WEEKDAY(TODAY()))+2) &amp;&amp; Invoice_Date__c &lt;= TODAY()-7-IF(WEEKDAY(TODAY())=1,WEEKDAY(TODAY())+7,WEEKDAY(TODAY()))+8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Last Week</label>
    <type>Checkbox</type>
</CustomField>