force-app/main/default/objects/Billing__c/fields/Is_Recent_2_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Is_Recent_2_Weeks__c</fullName>
    <formula>Is_This_Week__c || Is_Last_Week__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Recent 2 Weeks</label>
    <type>Checkbox</type>
</CustomField>