force-app/main/default/objects/Billing__c/fields/Last_Week_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Week_Invoice_Amount__c</fullName>
    <formula>IF(Invoice_Date__c &gt;= (TODAY()-7-IF(WEEKDAY(TODAY())=1,WEEKDAY(TODAY())+7,WEEKDAY(TODAY()))+2) &amp;&amp; Invoice_Date__c &lt;= TODAY()-7-IF(WEEKDAY(TODAY())=1,WEEKDAY(TODAY())+7,WEEKDAY(TODAY()))+8,
SAP_Total_Net__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Week Invoice Amount without Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>