force-app/main/default/objects/Billing__c/fields/Month_Data__c.field-meta.xml
<CustomField>
    <fullName>Month_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Month Data</label>
    <referenceTo>Month_Data__c</referenceTo>
    <relationshipLabel>Invoice Item</relationshipLabel>
    <relationshipName>Invoice_Item</relationshipName>
    <type>Lookup</type>
</CustomField>