force-app/main/default/objects/Billing__c/fields/Net_Invoice_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Net_Invoice_Amount_USD__c</fullName>
    <formula>IF(SAP_Total_Net__c != 0,SAP_Total_Net__c / Order__r.Rate__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Amount without Tax (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>