force-app/main/default/objects/Billing__c/fields/Reference_Delivery_Num__c.field-meta.xml
<CustomField>
    <fullName>Reference_Delivery_Num__c</fullName>
    <label>Reference Delivery Note Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>