force-app/main/default/objects/Billing__c/fields/Reverse_Billing__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Billing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cancelled Invoice Item</label>
    <referenceTo>Billing__c</referenceTo>
    <relationshipLabel>Cancel Invoice Item</relationshipLabel>
    <relationshipName>Billing</relationshipName>
    <type>Lookup</type>
</CustomField>