force-app/main/default/objects/Billing__c/fields/Reverse_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Invoice_Number__c</fullName>
    <label>Cancelled Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>