force-app/main/default/objects/Billing__c/fields/SAP_Total_Net__c.field-meta.xml
<CustomField>
    <fullName>SAP_Total_Net__c</fullName>
    <label>Invoice Amount without Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>