force-app/main/default/objects/Billing__c/fields/SAP_Total_Net_Develop__c.field-meta.xml
<CustomField>
    <fullName>SAP_Total_Net_Develop__c</fullName>
    <formula>SAP_Total_Net__c*IF(CONTAINS(&apos;ZAR3,ZAR8,ZRE,ZRE1,ZREQ,ZR1Q,ZARX,ZMX2,ZMX3,ZARA,ZARF,ZAR2&apos;,TEXT(Invoice__r.Order__r.Order_type__c)), -1, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Total Net Develop</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>