force-app/main/default/objects/Billing__c/fields/SAP_Total_Net_UDS__c.field-meta.xml
<CustomField>
    <fullName>SAP_Total_Net_UDS__c</fullName>
    <label>SAP Total Net (convert)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>