force-app/main/default/objects/Billing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Billing_Num__c</columns>
    <columns>Billing_Type__c</columns>
    <columns>Billing_Status__c</columns>
    <columns>Order__c</columns>
    <columns>Material_Code__c</columns>
    <columns>Description__c</columns>
    <columns>SAP_Total_Amount__c</columns>
    <columns>Collection_Transaction_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>